--- a/Frustration.ipynb
+++ b/Frustration.ipynb
@@ -41,12 +41,12 @@
    "source": [
     "frames = []\n",
     "labels = []\n",
-    "for file in os.listdir('output_bordam/'):\n",
+    "for file in os.listdir('output_frustration/'):\n",
     "    if file[-10:] == 'frames.pkl':\n",
-    "        with open('output_bordam/'+file, 'rb') as f:\n",
+    "        with open('output_frustration/'+file, 'rb') as f:\n",
     "            frames.append(pickle.load(f))\n",
     "    elif file[-10:] == 'labels.pkl':\n",
-    "        with open('output_bordam/'+file, 'rb') as f:\n",
+    "        with open('output_frustration/'+file, 'rb') as f:\n",
     "            labels.append(pickle.load(f))"
    ]
   },
@@ -97,13 +97,13 @@
     "for clip, label in zip(train_clips, train_clips_labels):\n",
     "    try:\n",
     "        train_images, train_labels = train_images + clip, train_labels + [label[0]] * len(clip)\n",
-    "    except:\n",
+    "    except Exception as e:\n",
     "        continue\n",
     "\n",
     "for clip, label in zip(test_clips, test_clips_labels):\n",
     "    try:\n",
     "        test_images, test_labels = test_images + clip, test_labels + [label[0]] * len(clip)\n",
-    "    except:\n",
+    "    except Exception as e:\n",
     "        continue\n",
     "    \n",
     "print(len(train_images), len(train_labels), len(test_images), len(test_labels))"
@@ -220,7 +220,7 @@
     "    # Second Fc\n",
     "    model.add(kl.Dense(4048))\n",
     "    # Third FC\n",
-    "    model.add(kl.Dense(2))\n",
+    "    model.add(kl.Dense(4))\n",
     "    # Softmax at the end\n",
     "    model.add(kl.Softmax())\n",
     "    \n",
@@ -229,90 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = network()\n",
-    "model = keras.Sequential([\n",
-    "    keras.layers.Conv2D(filters=8, input_shape=(48,48,1), kernel_size=5, strides=2, padding='valid', activation='selu'),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.Conv2D(filters=16, kernel_size=4, strides=2, padding='valid', activation='selu'),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2),\n",
-    "    keras.layers.Conv2D(filters=16, kernel_size=3, strides=2, padding='valid', activation='selu'),\n",
-    "    keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.Flatten(),\n",
-    "    keras.layers.Dense(1024, activation='selu'),\n",
-    "    keras.layers.Dropout(0.4),\n",
-    "    keras.layers.Dense(512, activation='selu'),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.Dense(4, activation='softmax')\n",
-    "])\n",
-    "InitialLearnRate = 0.0001\n",
-    "MaxEpochs = 3\n",
-    "MiniBatchSize = 50\n",
-    "opt = tf.keras.optimizers.SGD(lr=InitialLearnRate, decay=InitialLearnRate / MaxEpochs, momentum=0.03)\n",
+    "model = network()\n",
+    "InitialLearnRate = 0.03\n",
+    "MaxEpochs = 30\n",
+    "MiniBatchSize = 32\n",
+    "opt = tf.keras.optimizers.SGD(lr=InitialLearnRate, decay=InitialLearnRate / MaxEpochs)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=opt,\n",
     "    metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numFilters = 128 # number of filters in Conv2D layer\n",
-    "# kernal size of the Conv2D layer\n",
-    "kernalSize1 = 2\n",
-    "# max pooling window size\n",
-    "poolingWindowSz = 2\n",
-    "# number of filters in fully connected layers\n",
-    "numNueronsFCL1 = 128\n",
-    "numNueronsFCL2 = 128\n",
-    "# split ratio for test and validation\n",
-    "trainSplitRatio = 0.8\n",
-    "# number of epochs\n",
-    "Epochs = 10\n",
-    "# batchsize\n",
-    "batchSize = 10\n",
-    "# number of total clases\n",
-    "numClasses = 2\n",
-    "# dropout ratio for dropout layer\n",
-    "dropOutRatio = 0.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    model = keras.Sequential()\n",
-    "    # adding the first convolutionial layer with 32 filters and 5 by 5 kernal size, using the rectifier as the activation function\n",
-    "    model.add(keras.layers.Conv2D(numFilters, (kernalSize1,kernalSize1),input_shape=(48, 48,1),activation='relu'))\n",
-    "    # adding a maxpooling layer\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=(poolingWindowSz,poolingWindowSz),padding='valid'))\n",
-    "    # adding a dropout layer for the regularization and avoiding over fitting\n",
-    "    model.add(keras.layers.Dropout(dropOutRatio))\n",
-    "    # flattening the output in order to apply the fully connected layer\n",
-    "    model.add(keras.layers.Flatten())\n",
-    "    # adding first fully connected layer with 256 outputs\n",
-    "    model.add(keras.layers.Dense(numNueronsFCL1, activation='relu'))\n",
-    "    #adding second fully connected layer 128 outputs\n",
-    "    model.add(keras.layers.Dense(numNueronsFCL2, activation='relu'))\n",
-    "    # adding softmax layer for the classification\n",
-    "    model.add(keras.layers.Dense(numClasses, activation='softmax'))\n",
-    "    # Compiling the model to generate a model\n",
-    "    adam = keras.optimizers.Adam(lr = 0.001, decay=1e-6)\n",
-    "    model.compile(loss='sparse_categorical_crossentropy', optimizer=adam, metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.68708684 1.83627784]\n"
+      "[ 0.52469229 10.62461752]\n"
      ]
     }
    ],
@@ -342,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -372,34 +304,39 @@
       "    to  \n",
       "  ['...']\n",
       "Train on 1944475 samples\n",
-      "1944475/1944475 [==============================] - 273s 141us/sample - loss: 0.4510 - accuracy: 0.8360\n"
+      "Epoch 1/3\n",
+      "1944475/1944475 [==============================] - 258s 133us/sample - loss: nan - accuracy: 0.9529\n",
+      "Epoch 2/3\n",
+      "1944475/1944475 [==============================] - 261s 134us/sample - loss: nan - accuracy: 0.9529\n",
+      "Epoch 3/3\n",
+      "1944475/1944475 [==============================] - 270s 139us/sample - loss: nan - accuracy: 0.9529\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1a69b759608>"
+       "<tensorflow.python.keras.callbacks.History at 0x1d9f8c68a08>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(train_images, train_labels, epochs=1, class_weight=weights, batch_size=50)"
+    "model.fit(train_images, train_labels, epochs=3, class_weight=weights, batch_size=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "482212/482212 [==============================] - 31s 64us/sample - loss: 0.9676 - accuracy: 0.6854\n"
+      "482212/482212 [==============================] - 34s 71us/sample - loss: nan - accuracy: 0.9365\n"
      ]
     }
    ],
@@ -409,19 +346,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finish\n"
+     ]
+    }
+   ],
    "source": [
-    "# model.save('boredom74.h5')"
+    "model.save('Frustration.h5')\n",
+    "print(\"finish\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
