--- a/boredom.ipynb
+++ b/boredom.ipynb
@@ -41,12 +41,12 @@
    "source": [
     "frames = []\n",
     "labels = []\n",
-    "for file in os.listdir('output_bordam/'):\n",
+    "for file in os.listdir('output/'):\n",
     "    if file[-10:] == 'frames.pkl':\n",
-    "        with open('output_bordam/'+file, 'rb') as f:\n",
+    "        with open('output/'+file, 'rb') as f:\n",
     "            frames.append(pickle.load(f))\n",
     "    elif file[-10:] == 'labels.pkl':\n",
-    "        with open('output_bordam/'+file, 'rb') as f:\n",
+    "        with open('output/'+file, 'rb') as f:\n",
     "            labels.append(pickle.load(f))"
    ]
   },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,15 +203,15 @@
     "    model.add(tf.keras.layers.ReLU())\n",
     "    model.add(kl.MaxPooling2D(pool_size=(3, 3)))\n",
     "    # Second conv block\n",
-    "    model.add(kl.Conv2D(filters = 144, kernel_size=5, padding='same', strides=1))\n",
+    "    model.add(kl.Conv2D(filters = 256, kernel_size=5, padding='same', strides=1))\n",
     "    model.add(tf.keras.layers.ReLU())\n",
     "    model.add(kl.MaxPooling2D(pool_size=(2, 2)))\n",
-    "    model.add(tf.keras.layers.Dropout(0.5))\n",
+    "  # model.add(tf.keras.layers.Dropout(0.3))\n",
     "    # Third-Fourth-Fifth conv block\n",
     "    for i in range(3):\n",
     "        model.add(kl.Conv2D(filters = 144, kernel_size=3, padding='same', strides=1))\n",
     "        model.add(tf.keras.layers.ReLU())\n",
-    "        model.add(tf.keras.layers.Dropout(0.5))\n",
+    "    model.add(tf.keras.layers.Dropout(0.3))    \n",
     "    model.add(kl.MaxPooling2D(pool_size=(3, 3)))\n",
     "    # Flatten\n",
     "    model.add(kl.Flatten())\n",
@@ -220,7 +220,7 @@
     "    # Second Fc\n",
     "    model.add(kl.Dense(4048))\n",
     "    # Third FC\n",
-    "    model.add(kl.Dense(2))\n",
+    "    model.add(kl.Dense(4))\n",
     "    # Softmax at the end\n",
     "    model.add(kl.Softmax())\n",
     "    \n",
@@ -229,101 +229,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\'\\nmodel = network()\\nInitialLearnRate = 0.03\\nMaxEpochs = 30\\nMiniBatchSize = 32\\nopt = tf.keras.optimizers.SGD(lr=InitialLearnRate, decay=InitialLearnRate / MaxEpochs)\\nmodel.compile(loss=\"sparse_categorical_crossentropy\", optimizer=opt,\\n    metrics=[\"accuracy\"])\\n'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# model = network()\n",
-    "model = keras.Sequential([\n",
-    "    keras.layers.Conv2D(filters=8, input_shape=(48,48,1), kernel_size=5, strides=2, padding='valid', activation='selu'),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.Conv2D(filters=16, kernel_size=4, strides=2, padding='valid', activation='selu'),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2),\n",
-    "    keras.layers.Conv2D(filters=16, kernel_size=3, strides=2, padding='valid', activation='selu'),\n",
-    "    keras.layers.MaxPooling2D(pool_size=(2, 2), strides=2),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.Flatten(),\n",
-    "    keras.layers.Dense(1024, activation='selu'),\n",
-    "    keras.layers.Dropout(0.4),\n",
-    "    keras.layers.Dense(512, activation='selu'),\n",
-    "    keras.layers.BatchNormalization(axis=-1),\n",
-    "    keras.layers.Dense(4, activation='softmax')\n",
-    "])\n",
-    "InitialLearnRate = 0.0001\n",
-    "MaxEpochs = 3\n",
-    "MiniBatchSize = 50\n",
-    "opt = tf.keras.optimizers.SGD(lr=InitialLearnRate, decay=InitialLearnRate / MaxEpochs, momentum=0.03)\n",
+    "''''\n",
+    "model = network()\n",
+    "InitialLearnRate = 0.03\n",
+    "MaxEpochs = 30\n",
+    "MiniBatchSize = 32\n",
+    "opt = tf.keras.optimizers.SGD(lr=InitialLearnRate, decay=InitialLearnRate / MaxEpochs)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=opt,\n",
-    "    metrics=[\"accuracy\"])\n"
+    "    metrics=[\"accuracy\"])\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numFilters = 128 # number of filters in Conv2D layer\n",
-    "# kernal size of the Conv2D layer\n",
-    "kernalSize1 = 2\n",
-    "# max pooling window size\n",
-    "poolingWindowSz = 2\n",
-    "# number of filters in fully connected layers\n",
-    "numNueronsFCL1 = 128\n",
-    "numNueronsFCL2 = 128\n",
-    "# split ratio for test and validation\n",
-    "trainSplitRatio = 0.8\n",
-    "# number of epochs\n",
-    "Epochs = 10\n",
-    "# batchsize\n",
-    "batchSize = 10\n",
-    "# number of total clases\n",
-    "numClasses = 2\n",
-    "# dropout ratio for dropout layer\n",
-    "dropOutRatio = 0.2"
+    "\n",
+    "model = network()\n",
+    "model.compile(optimizer='adamax',\n",
+    "            loss='sparse_categorical_crossentropy',\n",
+    "             metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    model = keras.Sequential()\n",
-    "    # adding the first convolutionial layer with 32 filters and 5 by 5 kernal size, using the rectifier as the activation function\n",
-    "    model.add(keras.layers.Conv2D(numFilters, (kernalSize1,kernalSize1),input_shape=(48, 48,1),activation='relu'))\n",
-    "    # adding a maxpooling layer\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=(poolingWindowSz,poolingWindowSz),padding='valid'))\n",
-    "    # adding a dropout layer for the regularization and avoiding over fitting\n",
-    "    model.add(keras.layers.Dropout(dropOutRatio))\n",
-    "    # flattening the output in order to apply the fully connected layer\n",
-    "    model.add(keras.layers.Flatten())\n",
-    "    # adding first fully connected layer with 256 outputs\n",
-    "    model.add(keras.layers.Dense(numNueronsFCL1, activation='relu'))\n",
-    "    #adding second fully connected layer 128 outputs\n",
-    "    model.add(keras.layers.Dense(numNueronsFCL2, activation='relu'))\n",
-    "    # adding softmax layer for the classification\n",
-    "    model.add(keras.layers.Dense(numClasses, activation='softmax'))\n",
-    "    # Compiling the model to generate a model\n",
-    "    adam = keras.optimizers.Adam(lr = 0.001, decay=1e-6)\n",
-    "    model.compile(loss='sparse_categorical_crossentropy', optimizer=adam, metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model.compile(optimizer='adamax',\n",
-    " #            loss='sparse_categorical_crossentropy',\n",
-    "  #            metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -372,34 +319,25 @@
       "    to  \n",
       "  ['...']\n",
       "Train on 1944475 samples\n",
-      "1944475/1944475 [==============================] - 273s 141us/sample - loss: 0.4510 - accuracy: 0.8360\n"
+      "Epoch 1/2\n",
+      " 618550/1944475 [========>.....................] - ETA: 4:04 - loss: 0.6102 - accuracy: 0.7420"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1a69b759608>"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(train_images, train_labels, epochs=1, class_weight=weights, batch_size=50)"
+    "history = model.fit(train_images, train_labels, epochs=2, class_weight=weights, batch_size=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "482212/482212 [==============================] - 31s 64us/sample - loss: 0.9676 - accuracy: 0.6854\n"
+      "482212/482212 [==============================] - 63s 131us/sample - loss: 1.1677 - accuracy: 0.6590\n"
      ]
     }
    ],
@@ -409,18 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save('boredom74.h5')"
+    "model.save('boredom74.h5')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
