--- a/EngagementLiveVideo.ipynb
+++ b/EngagementLiveVideo.ipynb
@@ -23,7 +23,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.load_model('Models/engagement86.h5')"
+    "physical_devices = tf.config.experimental.list_physical_devices('GPU')\n",
+    "if len(physical_devices) > 0:\n",
+    "   tf.config.experimental.set_memory_growth(physical_devices[0], True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.load_model('C:/Users/Moh.Massoud/ML/Engagment level/DAiSEE/engagement86.h5')"
    ]
   },
   {
@@ -34,12 +45,16 @@
    "source": [
     "cap = cv2.VideoCapture(1) # Check if the webcam is opened correctLy \n",
     "if not cap.isOpened():\n",
-    "    cap = cv2.VideoCapture(0) \n",
+    "    cap = cv2.VideoCapture('http://192.168.1.5:4747/video') \n",
     "if not cap.isOpened():\n",
     "    raise IOError(\"Cannot open webcam\")\n",
-    "        \n",
+    "    \n",
+    "frame_count = 0\n",
+    "state = 0\n",
+    "printState = -1\n",
     "while True:\n",
     "    _, frame = cap.read()\n",
+    "    frame_count += 1\n",
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    detector = dlib.get_frontal_face_detector()\n",
     "    faces = detector(gray)\n",
@@ -63,7 +78,15 @@
     "            \n",
     "    for i in range(len(predictions)):\n",
     "        predict=np.argmax(predictions[i])\n",
-    "        cv2.putText(frame, f\"{'Engaged' if predict[i] else 'Not Engaged'}\", (x1, y1), font, 0.5, (0, 0, 255), 2, cv2.LINE_4)\n",
+    "    state += predict\n",
+    "    \n",
+    "    if frame_count > 15:\n",
+    "        printState = round(state/15,2)\n",
+    "        state = 0\n",
+    "        frame_count = 0\n",
+    "        \n",
+    "    if printState != -1 and len(roi):    \n",
+    "        cv2.putText(frame, f\"{'Engaged' if printState else 'Not Engaged'}\", (x1, y1), font, 0.5, (0, 0, 255), 2, cv2.LINE_4)\n",
     "    \n",
     "    cv2.imshow(\"Drowsiness detection\", frame)\n",
     "    if cv2.waitKey(2) & 0xFF == ord('q'): \n",
@@ -71,27 +94,13 @@
     "        cv2.destroyAllWindows() \n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow] *",
+   "display_name": "Python 3.7 (tensorflow)",
    "language": "python",
-   "name": "conda-env-tensorflow-py"
+   "name": "tensorflow"
   },
   "language_info": {
    "codemirror_mode": {
@@ -103,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
