--- a/EngagementLiveVideo.ipynb
+++ b/EngagementLiveVideo.ipynb
@@ -45,54 +45,90 @@
    "source": [
     "cap = cv2.VideoCapture(1) # Check if the webcam is opened correctLy \n",
     "if not cap.isOpened():\n",
-    "    cap = cv2.VideoCapture('http://192.168.1.5:4747/video') \n",
+    "    cap = cv2.VideoCapture('C:/Users/Moh.Massoud/ML/Engagment level/DAiSEE/hafezdemo.mp4') \n",
     "if not cap.isOpened():\n",
     "    raise IOError(\"Cannot open webcam\")\n",
     "    \n",
+    "    \n",
+    "frame_width = int(cap.get(3))\n",
+    "frame_height = int(cap.get(4))\n",
+    "\n",
+    "size = (frame_width, frame_height)\n",
+    "result = cv2.VideoWriter('hafez demo.avi', \n",
+    "                         cv2.VideoWriter_fourcc(*'MJPG'),\n",
+    "                         25, size)\n",
+    "\n",
+    "detector = dlib.get_frontal_face_detector()\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "\n",
     "frame_count = 0\n",
     "state = 0\n",
     "printState = -1\n",
+    "count = 0\n",
     "while True:\n",
     "    _, frame = cap.read()\n",
-    "    frame_count += 1\n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    detector = dlib.get_frontal_face_detector()\n",
-    "    faces = detector(gray)\n",
-    "    #predictor = dlib.shape_predictor(\"shape_predictor_68_face_landmarks.dat\")\n",
-    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "    engage=0\n",
-    "    roi=[]\n",
-    "    for face in faces:\n",
-    "        x1 = face.left()\n",
-    "        y1 = face.top()\n",
-    "        x2 = face.right()\n",
-    "        y2 = face.bottom()\n",
-    "        # width = x2 - x1\n",
-    "        # height = y2 - y1\n",
-    "        cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
-    "        roi.append(cv2.resize(cv2.cvtColor(frame[y1:y2, x1:x2], cv2.COLOR_BGR2GRAY), (48,48)))\n",
-    "    predictions = []\n",
-    "    if(len(roi)>0):\n",
-    "        test_images = np.expand_dims(roi, axis=3)\n",
-    "        predictions = model.predict(test_images)\n",
-    "            \n",
-    "    for i in range(len(predictions)):\n",
-    "        predict=np.argmax(predictions[i])\n",
-    "    state += predict\n",
-    "    \n",
-    "    if frame_count > 15:\n",
-    "        printState = round(state/15,2)\n",
-    "        state = 0\n",
-    "        frame_count = 0\n",
-    "        \n",
-    "    if printState != -1 and len(roi):    \n",
-    "        cv2.putText(frame, f\"{'Engaged' if printState else 'Not Engaged'}\", (x1, y1), font, 0.5, (0, 0, 255), 2, cv2.LINE_4)\n",
-    "    \n",
-    "    cv2.imshow(\"Drowsiness detection\", frame)\n",
+    "    count += 1\n",
+    "    if _:\n",
+    "        frame_count += 1\n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "        faces = detector(gray)\n",
+    "        #predictor = dlib.shape_predictor(\"shape_predictor_68_face_landmarks.dat\")\n",
+    "\n",
+    "        engage=0\n",
+    "        roi=[]\n",
+    "        for face in faces:\n",
+    "            x1 = face.left()\n",
+    "            y1 = face.top()\n",
+    "            x2 = face.right()\n",
+    "            y2 = face.bottom()\n",
+    "            # width = x2 - x1\n",
+    "            # height = y2 - y1\n",
+    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "            roi.append(cv2.resize(cv2.cvtColor(frame[y1:y2, x1:x2], cv2.COLOR_BGR2GRAY), (48,48)))\n",
+    "        predictions = []\n",
+    "        if(len(roi)>0):\n",
+    "            test_images = np.expand_dims(roi, axis=3)\n",
+    "            predictions = model.predict(test_images)\n",
+    "        predict = 0        \n",
+    "        for i in range(len(predictions)):\n",
+    "            predict=np.argmax(predictions[i])\n",
+    "        state += predict\n",
+    "\n",
+    "        if frame_count > 25:\n",
+    "            printState = round(state/25,2)\n",
+    "            state = 0\n",
+    "            frame_count = 0\n",
+    "\n",
+    "        if printState != -1 and len(roi):    \n",
+    "            cv2.putText(frame, f\"{'Engaged' if printState else 'Not Engaged'}\", (x1, y1), font, 0.5, (0, 0, 255), 2, cv2.LINE_4)\n",
+    "\n",
+    "        cv2.imshow(\"Drowsiness detection\", frame)\n",
+    "        result.write(frame)\n",
     "    if cv2.waitKey(2) & 0xFF == ord('q'): \n",
     "        cap. release() \n",
     "        cv2.destroyAllWindows() \n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3380"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count"
    ]
   }
  ],
