--- a/Training/Boredom Model.ipynb
+++ b/Training/Boredom Model.ipynb
@@ -221,17 +221,17 @@
       "  ['...']\n",
       "Train on 1944475 samples\n",
       "Epoch 1/3\n",
-      "1944475/1944475 [==============================] - 794s 409us/sample - loss: 0.6933 - accuracy: 0.4982\n",
+      "1944475/1944475 [==============================] - 794s 409us/sample - loss: 0.6933 - accuracy: 0.6582\n",
       "Epoch 2/3\n",
-      "1944475/1944475 [==============================] - 789s 406us/sample - loss: 0.6932 - accuracy: 0.4915\n",
+      "1944475/1944475 [==============================] - 789s 406us/sample - loss: 0.6932 - accuracy: 0.6915\n",
       "Epoch 3/3\n",
-      "1944475/1944475 [==============================] - 788s 405us/sample - loss: 0.6932 - accuracy: 0.5106\n"
+      "1944475/1944475 [==============================] - 788s 405us/sample - loss: 0.6932 - accuracy: 0.7406\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x18639c97d08>"
+       "<tensorflow.python.keras.callbacks.History at 0x28636b97d09>"
       ]
      },
      "execution_count": 14,
